--- a/src/css/newtab.css
+++ b/src/css/newtab.css
@@ -23,9 +23,9 @@
   
 }
 
-.voice{
-    height:20px;
+.search{
+    height:18px;
     position:relative;
-    top:5px;
-    left:10px;
+    right: 5px;
+    top: 3px;
 }
