--- a/src/css/newtab.css
+++ b/src/css/newtab.css
@@ -1,3 +1,24 @@
+@media (prefers-color-scheme: light) {  
+    body {  
+       background: white;    
+       color: black;  
+    }
+
+    .searchbar{
+        background-color: white;
+    }
+}
+@media (prefers-color-scheme: dark) {  
+    body {  
+       background: black;  
+       color: white; 
+    }
+
+    .searchbar{
+        background-color: black;
+    }
+}
+
 .bar{
     margin:0 auto;
     width:575px;
@@ -20,7 +41,6 @@
     width:500px;
     font-size:16px;
     outline: none;
-  
 }
 
 .search{
