quick and easy portrait v landscape  + cleaner dark mode bgchandling

--- a/src/css/newtab.css
+++ b/src/css/newtab.css
@@ -10,11 +10,16 @@
 }
 @media (prefers-color-scheme: dark) {  
     body {  
-       background: black;  
+       background: rgba(0,0 ,0,0.9);
        color: white; 
     }
 
     .searchbar{
+        background-color: black;
+        color: white;
+    }
+
+    .bar{
         background-color: black;
         color: white;
     }
