--- a/src/css/newtab.css
+++ b/src/css/newtab.css
@@ -85,7 +85,8 @@
     }
 
     .card{
-        background-color: rgba(0,0 ,0,0.9);
+        background-color: rgb(19, 19, 19);
+        border-color: #717171;
     }
 }
 
@@ -106,7 +107,7 @@
     max-width:575px;
     height: 45px;
     border-radius:30px;
-    border:3px solid #dcdcdc;
+    border:2px solid #dcdcdc;
 }
 
 .bar:hover{
